Aggregation sum/max/min/prod/men/median/percentile/var/std

--- a/08_Numpy-Aggregation-Operation.ipynb
+++ b/08_Numpy-Aggregation-Operation.ipynb
@@ -4,25 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 08 聚合操作"
+    "# 08 Aggregation Operation （聚合操作）"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 8.1 聚合统计\n",
     "- np.sum(X) 比python原生的 sum(X) 要快\n",
     "- np.sum(X),np.max(X),np.min(X) 可以用np开头的方式，其实更推荐，能看出是使用了numpy库\n",
     "- X.max(), X.min(), X.sum() 也可以使用面向对象的方式来调用  \n",
     "  \n",
     "  \n",
-    "- np.sum(X, axis=1),沿着axis=1进行相加，更好的理解的方式是，即这个轴不要了，压缩这个轴（对列进行降维，压成一列），从左右方向压成一块。  \n",
+    "- np.sum(X, axis=1),沿着axis=1进行相加，沿着列的方向，即每一行中的元素进行求合\n",
+    "- 更好的理解的方式是，即这个轴不要了，压缩这个轴（对列进行降维，压成一列），从左右方向压成一块。  \n",
+    "- np.sum(X, axis=0),第0个轴，即行的维度不要了，压缩成一行，从上下方向压成一块。\n",
     "  \n",
     "  \n",
     "- np.prod(x)计算所有值的乘积，np.pro(x +1)  \n",
     "  \n",
     "   \n",
-    "- np.men(x), np.median(x)"
+    "- np.men(x), np.median(x) 均值和中位数\n",
+    "- np.percentile(x, q=50) 百分位点，通常考虑q=0,25,50,75,100；0->最小值，50->平均值，100->最大值\n",
+    "- np.var(X), np.std(X) 方差，标准差"
    ]
   },
   {
@@ -38,35 +43,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.27559367, 0.40276498, 0.1495895 , 0.4132756 , 0.85030566,\n",
-       "       0.27179939, 0.5482504 , 0.39632844, 0.694666  , 0.43730008,\n",
-       "       0.48898452, 0.71286515, 0.17703444, 0.50482839, 0.51860716,\n",
-       "       0.59467387, 0.14708653, 0.61013904, 0.9988405 , 0.56038259,\n",
-       "       0.19989926, 0.83755875, 0.72351721, 0.74212331, 0.55581426,\n",
-       "       0.05214386, 0.59805735, 0.68914571, 0.12055577, 0.96915861,\n",
-       "       0.17034819, 0.99700258, 0.53571315, 0.68891049, 0.45690284,\n",
-       "       0.60100203, 0.41673554, 0.1920164 , 0.38586942, 0.26239946,\n",
-       "       0.35433668, 0.38773537, 0.3229421 , 0.46231049, 0.9177509 ,\n",
-       "       0.96965727, 0.49750617, 0.51954233, 0.13105562, 0.3445847 ,\n",
-       "       0.08009934, 0.16337939, 0.58251533, 0.97430608, 0.17223985,\n",
-       "       0.21333384, 0.98847121, 0.41421853, 0.12394833, 0.38623346,\n",
-       "       0.89272785, 0.05258517, 0.52362495, 0.73252427, 0.87069608,\n",
-       "       0.88528645, 0.19439779, 0.5844859 , 0.61509748, 0.59857774,\n",
-       "       0.62341484, 0.33839587, 0.39146941, 0.06870172, 0.01722697,\n",
-       "       0.29621835, 0.67228684, 0.21792625, 0.18581839, 0.62992731,\n",
-       "       0.28838526, 0.56322208, 0.84298507, 0.09328914, 0.14797757,\n",
-       "       0.29383648, 0.81940825, 0.93202755, 0.33676039, 0.45555227,\n",
-       "       0.22317886, 0.48434349, 0.71032127, 0.77092562, 0.83440802,\n",
-       "       0.23280455, 0.94182894, 0.67372715, 0.41935855, 0.53162125])"
+       "array([0.54466903, 0.35098438, 0.83685179, 0.87211953, 0.70306734,\n",
+       "       0.72769852, 0.67723156, 0.01143393, 0.39554954, 0.01661382,\n",
+       "       0.98684657, 0.59439437, 0.09032016, 0.08020356, 0.66921875,\n",
+       "       0.90189568, 0.52337737, 0.65711747, 0.36015809, 0.17808554,\n",
+       "       0.0427574 , 0.02848358, 0.90112445, 0.81963198, 0.59479923,\n",
+       "       0.73001444, 0.90788418, 0.44988806, 0.54312456, 0.64322228,\n",
+       "       0.68240175, 0.49052431, 0.59531689, 0.76528741, 0.36656881,\n",
+       "       0.57455059, 0.40276141, 0.9810531 , 0.52289808, 0.52013765,\n",
+       "       0.24964781, 0.37558749, 0.50033897, 0.18453965, 0.90758434,\n",
+       "       0.14379729, 0.03539753, 0.33579006, 0.75380067, 0.6672744 ,\n",
+       "       0.78426802, 0.02258226, 0.81916726, 0.43187028, 0.48014611,\n",
+       "       0.14716364, 0.54753603, 0.66048599, 0.38289364, 0.05737856,\n",
+       "       0.49131456, 0.49531487, 0.33302748, 0.55475821, 0.38395166,\n",
+       "       0.00433405, 0.71856172, 0.34611708, 0.36169886, 0.82096009,\n",
+       "       0.02392956, 0.51602514, 0.60112295, 0.61105822, 0.94280706,\n",
+       "       0.6919803 , 0.11911595, 0.58772064, 0.3851722 , 0.88326303,\n",
+       "       0.43493806, 0.56465319, 0.55267509, 0.67949091, 0.32474339,\n",
+       "       0.53443047, 0.07982385, 0.39684933, 0.24043171, 0.64893863,\n",
+       "       0.65689312, 0.83120235, 0.03223717, 0.54221052, 0.31439385,\n",
+       "       0.90046057, 0.520867  , 0.46474423, 0.3600251 , 0.04582211])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,16 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "48.94170850611532"
+       "49.22558144002014"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "48.94170850611532"
+       "49.2255814400201"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,24 +122,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 216 ms\n",
-      "Wall time: 2.04 ms\n"
+      "Wall time: 277 ms\n",
+      "Wall time: 2 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "499706.14473698783"
+       "499723.6512343295"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,16 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.168202344414837e-06"
+       "4.439116373378127e-07"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,16 +172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999998035050232"
+       "0.9999991341059843"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +204,7 @@
        "       [12, 13, 14, 15]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +225,7 @@
        "120"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +245,7 @@
        "array([24, 28, 32, 36])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +266,7 @@
        "array([ 6, 22, 38, 54])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +287,7 @@
        "0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +307,7 @@
        "2004189184"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +327,7 @@
        "7.5"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +347,7 @@
        "7.5"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +367,7 @@
        "3.2"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +388,7 @@
        "2.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,16 +399,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4993542674140173"
+       "0.4995751655990268"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,16 +419,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4993542674140173"
+       "0.4995751655990268"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,16 +439,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999998035050232"
+       "0.9999991341059843"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,16 +459,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999998035050232"
+       "0.9999991341059843"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,17 +479,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.439116373378127e-07\n",
+      "0.25011898848158\n",
+      "0.4995751655990268\n",
+      "0.7494674022167922\n",
+      "0.9999991341059843\n"
+     ]
+    }
+   ],
+   "source": [
+    "for percent in [0,25,50,75,100]:\n",
+    "    print(np.percentile(big_array, q=percent))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08324466826682135"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.var(big_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.28852152132349046"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(big_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 生成一个正太分布的数组，均值为0，标准差为1\n",
+    "x =np.random.normal(0, 1, size=1000000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.001071169063334824"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.00049733902485"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(x)"
+   ]
   },
   {
    "cell_type": "code",
@@ -510,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
