--- a/08_Polynomial-Regression-and-Model-Generalization/04_Why-Train-Test-Split.ipynb
+++ b/08_Polynomial-Regression-and-Model-Generalization/04_Why-Train-Test-Split.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8.4 Train-Test-Split的意义"
+    "# 8.4 Train-Test-Split的意义及模型泛化能力"
    ]
   },
   {
@@ -387,7 +387,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.4.1 使用 train_test_split后比较均方误差"
+    "## 8.4.1 使用 train_test_split后比较泛化能力\n",
+    "    - 使用线性回归时，均方误差大于2\n",
+    "    - 多项式回归中\n",
+    "        - 2次幂和10次幂小于1\n",
+    "        - 100次幂则上亿了，显然泛化能力太差了，"
    ]
   },
   {
@@ -398,6 +402,98 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=666)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.2199965269396573"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lin_reg = LinearRegression()\n",
+    "lin_reg.fit(X_train, y_train)\n",
+    "y_predict = lin_reg.predict(X_test)\n",
+    "mean_squared_error(y_test, y_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.80356410562979"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly2_reg = PolynomialRegression(degree=2)\n",
+    "poly2_reg.fit(X_train, y_train)\n",
+    "y2_predict = poly2_reg.predict(X_test)\n",
+    "mean_squared_error(y_test, y2_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9212930722150768"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly10_reg = PolynomialRegression(degree=10)\n",
+    "poly10_reg.fit(X_train, y_train)\n",
+    "y10_predict = poly10_reg.predict(X_test)\n",
+    "mean_squared_error(y_test, y10_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14075796434.50641"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly100_reg = PolynomialRegression(degree=100)\n",
+    "poly100_reg.fit(X_train, y_train)\n",
+    "y100_predict = poly100_reg.predict(X_test)\n",
+    "mean_squared_error(y_test, y100_predict)"
    ]
   },
   {
